fixed header too tall

--- a/src/assets/styles/cmps/_app-header.scss
+++ b/src/assets/styles/cmps/_app-header.scss
@@ -5,7 +5,7 @@
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
 
-    padding: 8px;
+    padding: 8px 8px 0;
     max-height: 64px;
 
     border-radius: 0;
